# libusb

./: .gitignore  CMakeLists.txt  README.proxy.md  README.redir.md  config.h.in  configure.ac
docker/: Dockerfile
examples/: Makefile.am  proxy_server.cpp  redir_server.c  redir_server.cpp
libusb/: Makefile.am  libusb_redir.hpp  libusbi.h
libusb/os/: proxy.cpp  redir.c  redir.cpp
libusb/os/proxy/: client.hpp  impl.hpp  log.hpp  proxy.hpp  server.hpp
proxy/: CMakeLists.txt  acceptor.hpp  build.sh  client.cpp  client.hpp  impl.hpp  log.hpp  proxy.hpp  server.cpp  server.hpp
proxy/cmake/: cli11.cmake  fmt.cmake  wirecall.cmake
